--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Code Quiz</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
+    <header>
+      <div class="scoreboard">View high scores</div>
+      <div>Time: 0</div>
+    </header>
+
+    <article>
+      <h1>Coding Quiz Challenge</h1>
+      <p>
+        Try to answer the following code-related questions within the time
+        limit. Keep in mind that incorrect answers will penalize your score/time
+        by ten seconds!
+      </p>
+      <button>Start Quiz</button>
+    </article>
     <script src="./script.js"></script>
   </body>
 </html>
