add scores submit section in html file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
 
       <!--Questions & Answers section-->
-      <section style="display: none" class="main">
+      <section class="main" style="display: none">
         <div class="questions" data-state="hidden"></div>
         <div class="options-container">
           <div class="option-box" class="options" data-state="hidden"></div>
@@ -46,6 +46,16 @@
           <div class="option-box" class="options" data-state="hidden"></div>
           <div class="option-box" class="options" data-state="hidden"></div>
         </div>
+      </section>
+      <!--Scores Submit section-->
+      <section class="scores submit" style="display: none">
+        <h2>All done!</h2>
+        <div>Your final score is</div>
+        <form>
+          <label>Enter Initials:</label>
+          <input type="text" />
+          <input type="submit" value="Submit" />
+        </form>
       </section>
     </article>
     <script src="./script.js"></script>
