update question and answers section in Javascript file

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <section class="questions-answers">
         <h1 class="question"></h1>
         <div class="options-container">
-          <div class="option-box" class="options"></div>
-          <div class="option-box" class="options"></div>
-          <div class="option-box" class="options"></div>
-          <div class="option-box" class="options"></div>
+          <div class="options"></div>
+          <div class="options"></div>
+          <div class="options"></div>
+          <div class="options"></div>
         </div>
       </section>
       <!--Scores Submit section-->
