add more questions and answers to the list

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           <div onclick="validateAndNextDisplayQuestion()" class="options"></div>
           <div onclick="validateAndNextDisplayQuestion()" class="options"></div>
         </div>
+        <div class="result-container">
+          <hr />
+          <div class="result"></div>
+        </div>
       </section>
       <!--Scores Submit section-->
       <section class="scores-submit" style="display: none">
