add some changes and comments

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
           ></div>
         </div>
         <div class="result-container" style="display: none">
-          <hr />
           <div class="result"></div>
         </div>
       </section>
@@ -62,7 +61,12 @@
         <form>
           <label>Enter Initials:</label>
           <input class="initials-text-box" type="text" />
-          <input onclick="submitInitials(event)" type="submit" value="Submit" />
+          <input
+            onclick="submitInitials(event)"
+            type="submit"
+            class="scorebutton"
+            value="Submit"
+          />
         </form>
       </section>
 
